--- a/src/app/theme/admin-layout/admin-layout.component.html
+++ b/src/app/theme/admin-layout/admin-layout.component.html
@@ -45,4 +45,5 @@
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
+  <app-customizer (optionsChange)="updateOptions($event)"></app-customizer>
 </div>
