Added profile bar

--- a/src/app/theme/header/header.component.html
+++ b/src/app/theme/header/header.component.html
@@ -14,4 +14,5 @@
   <button mat-icon-button class="hide-small" (click)="toggleFullscreen()">
     <mat-icon>fullscreen</mat-icon>
   </button>
+  <app-user></app-user>
 </mat-toolbar>
